--- a/PieShop/PieShop/PieShop.csproj
+++ b/PieShop/PieShop/PieShop.csproj
@@ -16,4 +16,11 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Controllers\Api\" />
+    <Folder Include="Dtos\" />
+    <Folder Include="wwwroot\img\" />
+  </ItemGroup>
+
 </Project>
