--- a/PieShop/PieShop/PieShop.csproj
+++ b/PieShop/PieShop/PieShop.csproj
@@ -7,6 +7,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.1" />
@@ -18,7 +19,6 @@
 
 
   <ItemGroup>
-    <Folder Include="Controllers\Api\" />
     <Folder Include="Dtos\" />
     <Folder Include="wwwroot\img\" />
   </ItemGroup>
